--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -36,10 +36,8 @@
     <div class="py-2">
         <table>
             <tr>
-                <th><a th:href = "@{/logout}"><button class="btn btn-primary"
-                                                      sec:authorize="isAuthenticated()">Logout</button></a></th>
-                <th><a th:href = "@{/manage/class}"><button class="btn btn-primary"
-                                                            sec:authorize="isAuthenticated()">수업 관리</button></a></th>
+                <th><a th:href = "@{/logout}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">Logout</button></a></th>
+                <th><a th:href = "@{/manage/class}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">수업 관리</button></a></th>
             </tr>
         </table>
     </div>
