--- a/scheduler/src/main/resources/templates/manage/studentList.html
+++ b/scheduler/src/main/resources/templates/manage/studentList.html
@@ -83,7 +83,7 @@
                             </form>
                         </div>
                     </td>
-                    <td><button class="btn btn-primary studentID" th:value="${student.getId()}">삭제</button></td>
+                    <td><button class="btn btn-primary studentID delete-button" th:value="${student.getId()}">삭제</button></td>
                 </tr>
             </tbody>
             <tfoot>
