dddRefactoring(email, domain)

--- a/scheduler/src/main/resources/templates/cert/changePassword.html
+++ b/scheduler/src/main/resources/templates/cert/changePassword.html
@@ -48,7 +48,7 @@
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
-                <h1> 비밀번호 찾기 </h1>
+                <h1> 비밀번호 변경 </h1>
                 <label for="password"></label>
                 <input class="form-control" id="password" placeholder="변경할 비밀번호를 입력해 주세요"
                        th:errorclass="field-error" th:field="*{password}"
