--- a/scheduler/src/main/resources/templates/cert/initializePassword.html
+++ b/scheduler/src/main/resources/templates/cert/initializePassword.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ko"
-      xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -39,23 +38,26 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/help/changeEmail}" th:object="${emailEdit}">
+    <form method='post' role="form" th:action="@{/help/updatePassword}" th:object="${pwdEdit}">
         <div class="py-2">
             <div class="header">
                 <br><br>
+
             </div>
         </div>
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
-                <h1> 이메일 변경 </h1>
-                <p th:text="기존+'&nbsp;'+'이메일 : '+'&nbsp;'+${username.getEmail()}"></p>
-
-                <label for="email"></label>
-                <input class="form-control" id="email" placeholder="이메일을 입력해 주세요"
-                       th:errorclass="field-error" th:field="*{email}"
-                       type="email">
-                <div class="field-error" th:errors="*{email}"></div>
+                <h1> 비밀번호 찾기 </h1>
+                <label for="username"></label>
+                <input id="username"
+                       name="username" th:type="hidden"
+                       th:value="${username.getUsername()}"/>
+                <label for="password"></label>
+                <input class="form-control" id="password" placeholder="변경할 비밀번호를 입력해 주세요"
+                       th:errorclass="field-error" th:field="*{password}"
+                       type="password">
+                <div class="field-error" th:errors="*{password}"></div>
                 <div class="error-message" th:if="${errorMessage}">
                     <p th:text="${errorMessage}"></p>
                 </div><br>
