--- a/src/main/resources/templates/admin/teacherList.html
+++ b/src/main/resources/templates/admin/teacherList.html
@@ -42,8 +42,8 @@
                 </table>
                 <table>
                     <tr>
-                        <th><a th:href ="@{/admin/changePassword}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
-                        <th><a th:href ="@{/admin/changeEmail}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">이메일 변경</button></a></th>
+                        <th><a th:href ="@{/admin/password}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
+                        <th><a th:href ="@{/admin/email}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">이메일 변경</button></a></th>
                     </tr>
                 </table>
             </div>
