--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
     <title>Scheduler</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
+        .container{
+            max-width: 30em;
+        }
 
         body { background-color: lightgoldenrodyellow; }
 
