--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,8 +68,8 @@
                 </div><br>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/cert/findId">아이디 찾기</a></li>
-                            <li class="breadcrumb-item"><a href="/cert/findPassword">비밀번호 찾기</a></li>
+                            <li class="breadcrumb-item"><a href="/help/findId">아이디 찾기</a></li>
+                            <li class="breadcrumb-item"><a href="/help/findPassword">비밀번호 찾기</a></li>
                             <li class="breadcrumb-item"><a href="/join/teacher">회원가입</a></li>
                         </ol>
                     </nav>
