--- a/src/main/resources/templates/manage/class.html
+++ b/src/main/resources/templates/manage/class.html
@@ -41,8 +41,8 @@
                 </table>
                 <table>
                     <tr>
-                        <th><a th:href ="@{/help/changeEmail}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">이메일 변경</button></a></th>
-                        <th><a th:href ="@{/help/changePassword}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">비밀번호 변경</button></a></th>
+                        <th><a th:href ="@{/help/email}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">이메일 변경</button></a></th>
+                        <th><a th:href ="@{/help/password}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">비밀번호 변경</button></a></th>
                     </tr>
                 </table>
             </div>
