--- a/src/main/resources/templates/admin/help/changeEmail.html
+++ b/src/main/resources/templates/admin/help/changeEmail.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/admin/help/password}" th:object="${emailEdit}">
+    <form method='post' role="form" th:action="@{/admin/help/email}" th:object="${emailEdit}">
         <div class="py-2">
             <div class="header">
                 <br><br>
