--- a/src/main/resources/templates/board/list2.html
+++ b/src/main/resources/templates/board/list2.html
@@ -24,16 +24,16 @@
 
 <!-- 추가 글들을 위해 필요한 만큼 반복해서 추가할 수 있습니다. -->
 
-<script>
-    function toggleContent(postId) {
-        var contentDiv = document.getElementById(postId);
-        if (contentDiv.style.display === 'none') {
-            contentDiv.style.display = 'block';
-        } else {
-            contentDiv.style.display = 'none';
-        }
-    }
-</script>
+<!--<script>-->
+<!--    function toggleContent(postId) {-->
+<!--        var contentDiv = document.getElementById(postId);-->
+<!--        if (contentDiv.style.display === 'none') {-->
+<!--            contentDiv.style.display = 'block';-->
+<!--        } else {-->
+<!--            contentDiv.style.display = 'none';-->
+<!--        }-->
+<!--    }-->
+<!--</script>-->
 
 </body>
 </html>
