--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -1,8 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Scheduler</title>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+
+        body { background-color: lightgoldenrodyellow; }
+
+        .form-check-label input {
+            margin-right: 10px;
+        }
+
+        .board{
+            background-color: white;
+            padding: 1em;
+        }
+    </style>
 </head>
 <body>
 
