noticeboard(paging-ver.2)

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -13,15 +13,10 @@
 <style>
     body { background-color: lightgoldenrodyellow; }
 
-
     table {
         border-collapse: collapse;
         border-spacing: 0;
         background-color: white;
-    }
-
-    section {
-        padding: 80px 0;
     }
 
     .page-title {
@@ -120,63 +115,62 @@
             <table class="board-table">
                 <thead>
                 <tr>
-                    <th scope="col" class="th-num">번호</th>
-                    <th scope="col" class="th-title">제목</th>
-                    <th scope="col" class="th-date">등록일</th>
+                    <th scope="col" style="width: 20%" class="th-num">번호</th>
+                    <th scope="col" style="width: 60%" class="th-title">제목</th>
+                    <th scope="col" style="width: 20%" class="th-date">등록일</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <tr th:each="notice : ${noticeList}">
                     <td th:text="${notice.getId()}"></td>
-                    <td><a th:href="@{'/board/' + ${notice.getId()}}" th:text="${notice.getTitle()}"></a></td>
+                    <td><a th:href="@{'/board/'+${notice.getId()}}" th:text="${notice.getTitle()}"></a></td>
                     <td th:text="${#dates.format(notice.getCreationTimestamp(), 'yyyy-MM-dd')}"></td>
                 </tr>
+                </tbody>
 
-
+                <tfoot>
                 <tr class="d-flex justify-content-end">
-                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a class="btn btn-danger">글삭제</a></td>
-                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a href="/board/createNotice" class="btn btn-primary">글쓰기</a></td>
+                    <th sec:authorize="hasRole('ROLE_ADMIN')"><button class="btn btn-danger">글삭제</button></th>
+                    <th sec:authorize="hasRole('ROLE_ADMIN')"><button href="/board/createNotice" class="btn btn-primary">글쓰기</button></th>
                 </tr>
+                <tr></tr>
 
-
-                <tr class="container d-flex align-items-center justify-content-center" aria-label="Page navigation example"
+                <tr class="container d-flex align-items-center justify-content-center align-items-center" aria-label="Page navigation example"
                     th:with="start=${(noticeList.number/maxPage)*maxPage + 1},
                     end=(${(noticeList.totalPages == 0) ? 1 : (start + (maxPage - 1) < noticeList.totalPages ? start + (maxPage - 1) : noticeList.totalPages)})">
 
                     <td class="pagination">
-                        <th th:if="${start > 1}" class="page-item">
-                            <a th:href="@{/board/?page=0}" class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;&laquo;</span>
-                            </a>
-                        </th>
+                    <th th:if="${start > 1}" class="page-item">
+                        <a th:href="@{/board?page=0}" class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;&laquo;</span>
+                        </a>
+                    </th>
 
-                        <th th:if="${start > 1}" class="page-item">
-                            <a th:href="@{/board/?page=${(start - maxPage -1)}}" class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </th>
+                    <th th:if="${start > 1}" class="page-item">
+                        <a th:href="@{/board?(page=${start-maxPage-1})}" class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </th>
 
-                        <th th:each="page: ${#numbers.sequence(start, end)}" class="page-item" th:classappend="${noticeList.number+1 == page} ? active">
-                            <a th:href="@{/board/?(page=${page-1})}" th:text="${page}" class="page-link" href="#">1</a>
-                        </th>
+                    <th th:each="page: ${#numbers.sequence(start, end)}" class="page-item" th:classappend="${noticeList.number+1 == page} ? active">
+                        <a th:href="@{/board?(page=${page-1})}" th:text="${page}" class="page-link" href="#"></a>
+                    </th>
 
-                        <th th:if="${end < noticeList.totalPages}" class="page-item">
-                            <a th:href="@{/board/?page=${(start + maxPage - 1)}}" class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </th>
+                    <th th:if="${end < noticeList.totalPages}" class="page-item">
+                        <a th:href="@{/board?(page=${start+maxPage-1})}" class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </th>
 
-                        <th th:if="${end < noticeList.totalPages}" class="page-item">
-                            <a th:href="@{/board/?page=${(noticeList.totalPages - 1)}}" class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;&raquo;</span>
-                            </a>
-                        </th>
-                    </td>
-                </tr>
-                </tbody>
-                <tfoot></tfoot>
+                    <th th:if="${end < noticeList.totalPages}" class="page-item">
+                        <a th:href="@{/board?(page=${noticeList.totalPages-1})}" class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;&raquo;</span>
+                        </a>
+                    </th></tr>
+                </tfoot>
             </table>
+            <div></div>
         </div>
     </div>
 </div>
