--- a/src/main/resources/templates/board/createNotice.html
+++ b/src/main/resources/templates/board/createNotice.html
@@ -20,7 +20,6 @@
     .btn {
         margin: 1em;
     }
-    .ck-editor__editable { height: 10em; }
 
 </style>
 <body>
@@ -28,7 +27,7 @@
     <div class="py-2">
     <h2>공지사항</h2>
     <div>
-        <form method="post" action="/board/write" th:object="${noticeObject}">
+        <form method="post" th:action="@{/board/write}" th:object="${noticeObject}">
             <div class="form-group">
                 <label for="title">제목</label>
                 <input type="text" class="form-control" id="title"
@@ -36,7 +35,8 @@
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea class="form-control" id="content" name="content" placeholder="내용 작성"></textarea>
+                <textarea type="text" class="form-control" id="content" name="content"
+                          placeholder="내용 작성" rows="5"></textarea>
             </div>
             <div class="text-end"><button type="submit" class="btn btn-primary">등록</button></div>
         </form>
@@ -44,12 +44,4 @@
     </div>
 </div>
 </body>
-<script src="https://cdn.ckeditor.com/ckeditor5/40.2.0/classic/ckeditor.js"></script>
-<script>
-    ClassicEditor
-        .create( document.querySelector( '#content' ) )
-        .catch( error => {
-            console.error( error );
-        } );
-</script>
 </html>
