--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/html"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
@@ -7,8 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scheduler</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <style>
     body { background-color: lightgoldenrodyellow; }
@@ -91,8 +90,8 @@
 
 </style>
 <body>
-<div class="notice board rounded-3 border border-2">
-    <div class="page-title"></div>
+<div class="notice">
+    <div class="page-title board rounded-3 border border-2"></div>
     <div id="board-search">
         <div class="container">
             <div class="search-window">
@@ -127,8 +126,8 @@
         <div class="container d-flex align-items-center justify-content-center">
             <div class="board-bottom">
                 <div class="d-flex justify-content-end">
-                    <div sec:authorize="hasRole('ROLE_ADMIN')"><button class="btn btn-danger">글삭제</button></div>
-                    <div sec:authorize="hasRole('ROLE_ADMIN')"><button th:href="@{/board/createNotice}" class="btn btn-primary">글쓰기</button></div>
+                    <div><a th:href="@{/}"><button class="btn btn-danger" sec:authorize="hasRole('ROLE_ADMIN')">글삭제</button></a></div>
+                    <div><a th:href="@{/board/createNotice}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_ADMIN')">글쓰기</button></a></div>
                 </div>
 
                 <nav class="page-number"
@@ -162,5 +161,5 @@
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="js/board/list.js"></script>
+<script type="application/text/javascript" src="js/board/list.js"></script>
 </html>
