--- a/src/main/resources/templates/board/createNotice.html
+++ b/src/main/resources/templates/board/createNotice.html
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <label for="content">내용</label>
                 <textarea type="text" class="form-control" id="content" name="content"
-                          placeholder="내용 작성" rows="5"></textarea>
+                          placeholder="내용 작성" rows="5" required="required"></textarea>
             </div>
             <div class="text-end"><button type="submit" class="btn btn-primary">등록</button></div>
         </form>
