--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -106,16 +106,20 @@
             <table class="board-table">
                 <thead>
                 <tr>
-                    <th scope="col" style="width: 15%" class="th-num">번호</th>
+                    <th scope="col" style="width: 5%" class="th-num">번호</th>
+                    <th scope="col" style="width: 10%" class="th-num">작성자</th>
                     <th scope="col" style="width: 60%" class="th-title">제목</th>
-                    <th scope="col" style="width: 25%" class="th-date">등록일</th>
+                    <th scope="col" style="width: 15%" class="th-date">등록일</th>
+                    <th scope="col" style="width: 10%" class="th-date">조회수</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="notice : ${noticeList}">
                     <td th:text="${notice.getId()}"></td>
+                    <td th:text="${notice.getName()}"></td>
                     <td><a th:href="@{'/board/'+${notice.getId()}}" th:text="${notice.getTitle()}"></a></td>
                     <td th:text="${#dates.format(notice.getCreationTimestamp(), 'yyyy-MM-dd')}"></td>
+                    <td th:text="${notice.getViews()}"></td>
                 </tr>
                 </tbody>
                 <tfoot></tfoot>
